breaking word to prevent overflow

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -167,6 +167,7 @@ $image-top-margin: 60px;
   }
 
   h2 {
+    word-wrap: break-word;
     margin-top: 57px;
     margin-bottom: 28px;
 
